# ingreedy-haskell

./: README.md  ingreedy.cabal
src/: Ingreedy.hs
src/Ingreedy/: UnitParser.hs
test/: IngreedySpec.hs  UnitParserSpec.hs
