Name:                   ingreedy
Version:                0.0.0
Author:                 Ian C. Anderson <ian@iancanderson.com>
Maintainer:             Ian C. Anderson <ian@iancanderson.com>
License:                BSD3
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Ingreedy
  Build-Depends:        base >= 4 && < 5
                      , parsec

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , ingreedy
